--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@angular/router": "^4.0.1",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
-    "ng2-bootstrap": "1.1.16",
+    "ng2-bootstrap": "1.6.1",
     "rxjs": "^5.1.0",
     "typescript": "^2.2.2",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.7.6",
+    "moment": "2.18.1"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-rc.4",
